# inspect

./: .dockerignore  Cargo.toml  Dockerfile  PRIVACY.md  README.md  SKILL.md  fly.toml
.github/workflows/: release.yml  test-windows.yml
benchmarks/: martian_bench_v2.py
crates/inspect-api/src/: main.rs  openai.rs  routes.rs
crates/inspect-cli/: Cargo.toml  build.rs
crates/inspect-cli/src/: config.rs  main.rs
crates/inspect-cli/src/commands/: login.rs  logout.rs  mod.rs  pr.rs  predict.rs  review.rs  whoami.rs
crates/inspect-cli/src/formatters/: mod.rs  predict.rs
crates/inspect-core/: Cargo.toml
crates/inspect-core/src/: analyze.rs  github.rs  lib.rs  llm.rs  predict.rs  risk.rs  types.rs  untangle.rs
crates/inspect-mcp/: Cargo.toml
crates/inspect-mcp/src/: server.rs  tools.rs
docs/: package-lock.json  package.json
docs/src/app/: globals.css  page.tsx
docs/src/app/api/billing/balance/: route.ts
docs/src/app/api/billing/checkout/: route.ts
docs/src/app/api/billing/test/: route.ts
docs/src/app/api/billing/transactions/: route.ts
docs/src/app/api/billing/webhook/: route.ts
docs/src/app/api/review/: route.ts
docs/src/app/api/reviews/: route.ts
docs/src/app/api/triage/: route.ts
docs/src/app/benchmarks/: page.tsx
docs/src/app/cli/: layout.tsx
docs/src/app/cli/auth/: page.tsx
docs/src/app/dashboard/: layout.tsx  page.tsx
docs/src/app/dashboard/billing/: page.tsx
docs/src/app/dashboard/usage/: page.tsx
docs/src/app/docs/: page.tsx
docs/src/components/: nav.tsx
docs/src/lib/: credits.ts  openai.ts  prompts.ts  run-review.ts
site/: package-lock.json  package.json
site/src/app/: globals.css
site/src/app/api/billing/checkout/: route.ts
site/src/app/api/billing/webhook/: route.ts
site/src/app/api/review/: route.ts
site/src/app/api/triage/: route.ts
site/src/app/benchmarks/: page.tsx
site/src/app/dashboard/: layout.tsx  page.tsx
site/src/app/dashboard/billing/: page.tsx
site/src/app/docs/: page.tsx
site/src/components/: dashboard-nav.tsx
site/src/lib/: credits.ts  openai.ts  prompts.ts  stripe.ts  validate-key.ts
