[package]
name = "inspect-cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "inspect"
path = "src/main.rs"

[dependencies]
inspect-core = { path = "../inspect-core" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", rev = "71a6579" }
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
openssl-sys = { version = "0.9", optional = true }

[features]
vendored-openssl = ["openssl-sys/vendored"]
