[package]
name = "inspect-core"
version = "0.1.1"
edition = "2021"

[dependencies]
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", rev = "71a6579" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
