[package]
name = "inspect-mcp"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "inspect-mcp"
path = "src/main.rs"

[dependencies]
inspect-core = { path = "../inspect-core" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", rev = "71a6579" }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
